--- a/MovieShop/Views/Home/Index.cshtml
+++ b/MovieShop/Views/Home/Index.cshtml
@@ -1,5 +1,19 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Home Page";
 }
 
-
+<div class="rouded">
+    <div class="container-fluid">
+        <div class="row">
+            @foreach (var movieCard in Model)
+            {
+                <div class="col-6 col-sm-4 col-lg-3 col-xl-2">
+                    <div class="card">
+                        <img src="@movieCard.PosterUrl" alt="@movieCard.Title">
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</div>
