--- a/MovieShop/Views/Home/Index.cshtml
+++ b/MovieShop/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<ApplicationCore.Models.MovieCardModel>
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -9,7 +9,7 @@
             @foreach (var movieCard in Model)
             {
                 <div class="col-6 col-sm-4 col-lg-3 col-xl-2">
-                    <div class="card">
+                    <div class="card mb-4">
                         <img src="@movieCard.PosterUrl" alt="@movieCard.Title">
                     </div>
                 </div>
