_LoginInfo partial view

--- a/MovieShop/Views/Shared/_LoginInfoPartial.cshtml
+++ b/MovieShop/Views/Shared/_LoginInfoPartial.cshtml
@@ -1,3 +1,4 @@
 ﻿<div class="text-end">
-    <a class="btn btn-outline-dark me-2"></a>
+    <a class="btn btn-outline-dark me-2" asp-controller="Account" aps-action="Login">Login</a>
+    <a class="btn btn-outline-dark me-2" asp-controller="Account" asp-action="Register">Register</a>
 </div>
